# airtag-battery

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bat.py  bat.spec  pyproject.toml  setup.py
airtag_bat/: main.py
