[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airtag_bat"
version = "1.0.0"
description = "A tool to read AirTag battery status"
authors = [
    { name = "Henrik zu Jeddeloh", email = "henrik.zujeddeloh@protonmail.com"},
]
dependencies = [
    "tabulate"
]

[project.scripts]
airtag = "airtag_bat.main:get_bat"
